# sparky-plus

./: README.md  Sparky.sln
Sparky-core/: CMakeLists.txt  Sparky-core.vcxproj  Sparky-core.vcxproj.filters  application.cpp  application.h  engine.cpp  engine.h  gameinstance.cpp  gameinstance.h  global.h  main.cpp  miniheader.h
Sparky-core/Asset/: AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  animation.h  asset.h  fbxloader.cpp  fbxloader.h  imagedata.h  imageloader.cpp  imageloader.h  material.h  meshloader.h  objloader.cpp  objloader.h  rawmesh.h  rawskinmesh.h  skeletalmesh.cpp  skeletalpose.h  skeleton.cpp  skeleton.h  stlloader.cpp  stlloader.h
Sparky-core/animation/: AnimationComponent.h  Interpolator.cpp  Interpolator.h  animation.h  animationlayer.cpp  animationlayer.h  animationmanager.cpp  animationmanager.h  animationstack.cpp  animationstack.h  animationstate.h  controller.cpp  controller.h  dataset.h  keyvalue.cpp  keyvalue.h  keyvalue.inl  keyvaluenode.h  property.cpp  property.h  property.inl  propertygroup.h  sequence.h
Sparky-core/core/: event.h  object.h
Sparky-core/game/: CMakeLists.txt  Playercomponent.h  controller.h  lobby.h  movementcomponent.cpp  movementcomponent.h  mygameinstance.cpp  mygameinstance.h  player.h  playercontroller.cpp  playercontroller.h  robot.cpp  robot.h  robotcomponent.cpp  robotcomponent.h  robotcontroller.cpp  robotcontroller.h
Sparky-core/geometry/: AssetLoader.cpp  AssetLoader.h  fbxloader.cpp  fbxloader.h  objloader.cpp  objloader.h  rawmesh.h
Sparky-core/graphics/: errorreport.h  texture.h  (+5 more)
(+320 files in other folders)
